# cpp-template-project

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  apply_formating.sh  main.cpp
include/: example.hpp
test/: CMakeLists.txt  text_example.cpp
